Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36162

A long press does not call a right click event when "Enable press and hold for right-clicking" in the Pen and Touch settings is enabled

XMLWordPrintable

      I have a MouseArea whith a right click event

      import QtQuick 2.0
      
      Rectangle {
          id:rect
          width: 360
          height: 360
      
          MouseArea {
              anchors.fill: parent
              acceptedButtons: Qt.RightButton | Qt.LeftButton
              onClicked: {
                  if(mouse.button == Qt.RightButton)
                  {
                     console.log("Right")
                  }
              }
          }
      }
      

      "Enable press and hold for right-clicking" in the Pen and Touch settings is enabled

      I dont receive the onClicked event, is it normal ?

        For Gerrit Dashboard: QTBUG-36162
        # Subject Branch Project Status CR V

            srutledg Shawn Rutledge
            aflandin Antoine Flandin
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes